events and date diff added

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/styles/page.css">
     <script type="text/javascript" src="javascript/ajax-call.js"></script>
     <script type="text/javascript" src="javascript/fyber-template-engine.js"></script>
+    <script type="text/javascript" src="javascript/datediff.js"></script>
     <script type="text/javascript" src="javascript/events.js"></script>
     <script type="text/javascript" src="javascript/email-list.js"></script>
     <script type="text/javascript" src="javascript/app.js"></script>
@@ -20,21 +21,19 @@
     <div class="emailList__content">
       <div class="emailList__content-wrapper">
         <div  id="from" class="emailList__content-from">
-          From:Meg griffin
         </div>
         <div id="to" class="emailList__content-to">
-          to:Peter Griffin,chris Griffin
         </div>
         <div  id="received" class="emailList__content-received">
-          received: May 12st,205
         </div>
       </div>
-      <div class="emailList_content-body">
-        <div id="subject" class="emailList_content-subject">
-          Subject: you won't believe this one amazing beauty trick
-        </div>
+      <div class="emailList__content-body">
+        <h1 id="subject" class="emailList__content-subject">
+          Wellcome To your Email List 
+        </h1>
         <div  id="content" class="emailList__content-content">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          in the left panel you will find the unread messages in gray and your read messages will be in white.
+          <p> feel free to scroll down between the messages in the list</p>
         </div>
       </div>
     </div>
